--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,5 +1,5 @@
 {% extends 'home/base.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}FEB-UNM{% endblock %}
 {% block content %}
 
 
@@ -17,15 +17,15 @@
                                     </p>
                                     <div class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4">
                                         <a class="btn btn-light rounded-pill py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
-                                        <a class="btn btn-dark rounded-pill py-3 px-4 px-md-5 ms-2" href="#">Learn More</a>
+                                        <!-- <a class="btn btn-dark rounded-pill py-3 px-4 px-md-5 ms-2" href="#">Learn More</a> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-5 animated fadeInRight">
+                            <!-- <div class="col-lg-5 animated fadeInRight">
                                 <div class="calrousel-img" style="object-fit: cover;">
                                     <img src="/media/img/carousel-2.png" class="img-fluid w-100" alt="">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                                     </p>
                                     <div class="d-flex justify-content-center justify-content-md-end flex-shrink-0 mb-4">
                                         <a class="btn btn-light rounded-pill py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
-                                        <a class="btn btn-dark rounded-pill py-3 px-4 px-md-5 ms-2" href="#">Learn More</a>
+                                        <!-- <a class="btn btn-dark rounded-pill py-3 px-4 px-md-5 ms-2" href="#">Learn More</a> -->
                                     </div>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                             <h4 class="mb-4">Belajar Daring</h4>
                             <p class="mb-4">LMS hadir dalam rangka memfasilitasi pembelajaran yang fleksibel.. 
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="https://lms.syam-ok.unm.ac.id/course/index.php?categoryid=10">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="https://lms.syam-ok.unm.ac.id/course/index.php?categoryid=10">Selengkapnya</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
@@ -89,7 +89,7 @@
                             <p class="mb-4">System and Application Management Open Knowledge
                                 Universitas Negeri Makassar
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="https://syam-ok.unm.ac.id/">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="https://syam-ok.unm.ac.id/">Selengkapnya</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
@@ -100,7 +100,7 @@
                             <h4 class="mb-4">Layanan Akademik</h4>
                             <p class="mb-4">Sistem Informasi Akademik (SIA) Universitas Negeri Makassar untuk Layanan Akademik
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="https://sia.unm.ac.id/">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="https://sia.unm.ac.id/">Selengkapnya</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
@@ -111,7 +111,7 @@
                             <h4 class="mb-4">Kepakaran</h4>
                             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="{% url 'bidang_kepakaran' %}">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="{% url 'bidang_kepakaran' %}">Selengkapnya</a>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
         <!-- Feature End -->
 
         <!-- About Start -->
-        <div class="container-fluid bg-light about pb-5">
+        <!-- <div class="container-fluid bg-light about pb-5">
             <div class="container pb-5">
                 <div class="row g-5">
                     <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
@@ -171,7 +171,7 @@
                                         <h4 class="mb-0 text-dark">Tenaga Pengajar</h4>
                                     </div>
                                 </div>
-                                <!-- <div class="col-sm-6">
+                                <div class="col-sm-6">
                                     <div class="counter-item bg-light rounded p-3 h-100">
                                         <div class="counter-counting">
                                             <span class="text-primary fs-2 fw-bold" data-toggle="counter-up">967</span>
@@ -179,13 +179,13 @@
                                         </div>
                                         <h4 class="mb-0 text-dark"></h4>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- About End -->
 
         <!-- Service Start -->
@@ -208,8 +208,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Manajemen (S1)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3"> Manajemen (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -225,8 +225,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Ekonomi Pembangunan (S1)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3">Ekonomi Pembangunan (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -242,8 +242,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Pendidikan Ekonomi (S1)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3">Pendidikan Ekonomi (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -259,8 +259,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Akuntansi (S1)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3">Akuntansi (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -276,8 +276,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Kewirausahaan (S1)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3">Kewirausahaan (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -293,8 +293,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Bisnis Digital (S1)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3">Bisnis Digital (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -310,8 +310,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Akuntansi (D3)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3">Akuntansi (D3)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -327,8 +327,8 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h4 mb-4">Prodi Pendidikan Akuntansi (S1)</a>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
+                                    <a href="#" class="d-inline-block h5 mb-3">Pendidikan Akuntansi (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
                                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
@@ -349,8 +349,8 @@
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Berita Seputar Fakultas FEB UNM</h4>
                     <h1 class="display-4 mb-4">News And Updates</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
-                    </p>
+                    <!-- <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    </p> -->
                 </div>
                 <div class="row g-4 justify-content-center">
                     {% for news in news_list %}
@@ -392,7 +392,7 @@
         <!-- Blog End -->
 
         <!-- Team Start -->
-        <div class="container-fluid team pb-5">
+        <!-- <div class="container-fluid team pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Pimpinan</h4>
@@ -471,6 +471,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Team End -->
 {% endblock %}
