--- a/templates/kepakaran/bidang_kepakaran_detail.html
+++ b/templates/kepakaran/bidang_kepakaran_detail.html
@@ -1,6 +1,6 @@
 
 {% extends 'home/base.html' %}
-{% block title %}Daftar Pakar {% endblock %}
+{% block title %}Kepakaran {{ bidang.nama_bidang }} {% endblock %}
 
 
     
@@ -15,8 +15,8 @@
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Kepakaran FEB UNM</h4>
                     <h1 class="display-4 mb-4">{{ bidang.nama_bidang }}</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
-                    </p>
+                    <!-- <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    </p> -->
                 </div>
                 <div class="row g-4">
 
