--- a/templates/kepakaran/bidang_kepakaran_list.html
+++ b/templates/kepakaran/bidang_kepakaran_list.html
@@ -1,10 +1,6 @@
 
 {% extends 'home/base.html' %}
-{% block title %}Daftar Pakar {% endblock %}
-
-
-       
-
+{% block title %}Bidang Kepakaran {% endblock %}
 
 
 {% block content %}
