--- a/static/pakar/css/style.css
+++ b/static/pakar/css/style.css
@@ -55,7 +55,8 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
