--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -104,28 +104,6 @@
 
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                                    <span class="dropdown-toggle">Kemahasiswaan</span>
-                                </a>
-                                <div class="dropdown-menu">
-                                
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
-                                </div>
-                            </div>
-
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                                    <span class="dropdown-toggle">Penelitian & PKM</span>
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a href="feature.html" class="dropdown-item">Our Features</a>
-                                 
-                                </div>
-                            </div>
-
-
-
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                     <span class="dropdown-toggle">Akademik</span>
                                 </a>
                                 <div class="dropdown-menu">
@@ -133,9 +111,37 @@
                                   
                                 </div>
                             </div>
+
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                                    <span class="dropdown-toggle">Program Studi Ilmiah</span>
+                                    <span class="dropdown-toggle">Progam Studi</span>
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a href="feature.html" class="dropdown-item">Our Features</a>
+                                  
+                                </div>
+                            </div>
+
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                                    <span class="dropdown-toggle">Kemahasiswaan & Alumni</span>
+                                </a>
+                                <div class="dropdown-menu">
+                                
+                                    <a href="404.html" class="dropdown-item">404 Page</a>
+                                </div>
+                            </div>
+
+                
+
+
+
+                           
+                    
+                    
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                                    <span class="dropdown-toggle">Kerja Sama</span>
                                 </a>
                                 <div class="dropdown-menu">
                                     <a href="feature.html" class="dropdown-item">Our Features</a>
