--- a/templates/kepakaran/detail_pakar.html
+++ b/templates/kepakaran/detail_pakar.html
@@ -16,15 +16,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&family=Poppins&display=swap" rel="stylesheet"> 
 
         <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css?v={{ STATIC_VERSION }}">
         <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet"> -->
 
         <!-- Libraries Stylesheet -->
-        <link href="/static/pakar/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="/static/pakar/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <link href="/static/pakar/lib/owlcarousel/assets/owl.carousel.min.css?v={{ STATIC_VERSION }}" rel="stylesheet">
+        <link href="/static/pakar/lib/lightbox/css/lightbox.min.css?v={{ STATIC_VERSION }}" rel="stylesheet">
 
         <!-- Customized Bootstrap Stylesheet -->
-        <link href="/static/pakar/css/style.css" rel="stylesheet">
+        <link href="/static/pakar/css/style.css?v={{ STATIC_VERSION }}" rel="stylesheet">
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -437,15 +437,7 @@
                 <div class="container-fluid bg-white pt-5 px-0">
                     <div class="container bg-dark text-light text-center py-5">
                      
-                        <div class="d-flex justify-content-center mb-3">
-                            <a class="text-white" href="#">Privacy</a>
-                            <span class="px-3">|</span>
-                            <a class="text-white" href="#">Terms</a>
-                            <span class="px-3">|</span>
-                            <a class="text-white" href="#">FAQs</a>
-                            <span class="px-3">|</span>
-                            <a class="text-white" href="#">Help</a>
-                        </div>
+                        
                         <p class="m-0">&copy; All Rights Reserved</p>
                     </div>
                 </div>
