--- a/static/codex/css/style.css
+++ b/static/codex/css/style.css
@@ -190,8 +190,8 @@
 
     .navbar.navbar-expand-lg .navbar-toggler {
         padding: 8px 15px;
-        border: 1px solid var(--bs-primary);
-        color: var(--bs-primary);
+        border: 1px solid var(--bs-white);
+        color: var(--bs-white);
     }
 }
 
