--- a/static/dashboard/styles.css
+++ b/static/dashboard/styles.css
@@ -146,6 +146,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+
 .info-container {
     display: flex;
     flex-wrap: wrap;
@@ -530,4 +531,344 @@ body {
 
 .input-group button:hover {
     background-color: #005f56;
+}
+
+
+.form-container {
+    width: 100%;
+    /* max-width: 800px; */
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-container h1 {
+    text-align: center;
+    color: #00a2ff;
+}
+
+.form-container h2 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+    color: #00a2ff;
+    background-color: #e0f7ff;
+    padding: 10px;
+    border-radius: 4px 4px 0 0;
+}
+
+.form-section {
+    border: 1px solid #e0e0e0;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    background-color: #f9f9f9;
+    padding: 10px;
+}
+
+.form-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.form-group {
+    flex: 1 1 48%;
+    margin-bottom: 15px;
+    gap: 20px;
+    margin: 10px;
+}
+
+form label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+}
+
+form input[type="text"],
+form input[type="email"],
+form input[type="password"],
+form input[type="file"],
+form input[type="number"],
+form input[type="date"],
+form input[type="url"],
+
+form select,
+form textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1em;
+    box-sizing: border-box;
+}
+
+input[type="number"]:focus, 
+input[type="text"]:focus, 
+input[type="date"]:focus {
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 1em;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    /* display: block; */
+    margin: 20px auto;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0; /* 20px dari elemen sekitarnya */
+    font-size: 1em; /* Ukuran font yang sesuai dengan elemen induk */
+    min-width: 400px; /* Lebar minimum tabel adalah 400px */
+    border-radius: 5px 5px 0 0; /* Sudut membulat dengan radius 5px */
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); /* Bayangan dengan penyebaran 20px */
+}
+
+table thead tr {
+    background-color: #0f4229;
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+}
+
+table th,
+table td {
+    padding: 12px 15px; /* Padding 12px atas-bawah, 15px kiri-kanan */
+}
+
+table tbody tr {
+    border-bottom: 1px solid #dddddd; /* Garis bawah 1px solid */
+}
+
+table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3; /* Warna latar abu-abu untuk baris genap */
+}
+
+table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879; /* Garis bawah lebih tebal pada baris terakhir */
+}
+
+table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879; /* Warna hijau pada baris aktif */
+}
+
+@media (max-width: 668px) {
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin:10px 0; /* 20px dari elemen sekitarnya */
+    font-size: 11px; /* Ukuran font yang sesuai dengan elemen induk */
+    min-width: 40px; /* Lebar minimum tabel adalah 400px */
+    border-radius: 5px 5px 0 0; /* Sudut membulat dengan radius 5px */
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); /* Bayangan dengan penyebaran 20px */
+}
+
+   
+}
+
+
+@media (max-width: 768px) {
+.btn-edit, .btn-delete {
+    padding: 2px 2px
+}
+
+    
+}
+
+
+
+
+.btn-edit, .btn-delete {
+    display: inline-block;
+    padding: 5px 10px; /* Padding untuk tombol */
+    font-size: 1em; /* Ukuran font yang sesuai dengan elemen induk */
+    font-weight: bold;
+    border-radius: 5px; /* Sudut membulat pada tombol */
+    text-decoration: none; /* Hilangkan garis bawah */
+}
+
+.btn-edit {
+    background-color: #4CAF50; /* Warna latar hijau untuk tombol edit */
+    color: white;
+}
+
+.btn-edit:hover {
+    background-color: #45a049; /* Warna latar lebih gelap saat dihover */
+}
+
+.btn-delete {
+    background-color: #f44336; /* Warna latar merah untuk tombol delete */
+    color: white;
+}
+
+.btn-delete:hover {
+    background-color: #da190b; /* Warna latar lebih gelap saat dihover */
+}
+
+
+
+input[type="date"] {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+input[type="date"]:focus {
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+ /* Tambahkan aturan untuk QR code */
+ td[data-label="QR Code"] img {
+    max-width: 60px; /* Maksimal lebar gambar */
+    height: auto; /* Tinggi otomatis agar gambar proporsional */
+    display: block;
+    margin: 0 auto; /* Tengah-tengah */
+    margin-left: 0px; /* Jarak dari elemen sebelah kanan */
+}
+
+@media (max-width: 768px) {
+    td[data-label="QR Code"] img {
+        max-width: 60px; /* Maksimal lebar gambar untuk layar kecil */
+        margin-right: 0px;
+    }
+}
+
+.kategori-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.kategori-item {
+    padding: 10px;
+    margin: 5px 0;
+    background-color: #f1f1f1;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 18px;
+}
+
+.btn-tambah {
+    display: block;
+    width: fit-content;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.btn-tambah:hover {
+    background-color: #0056b3;
+}
+
+
+
+.form-group p {
+    margin-top: 5px; /* Atur margin atas pada paragraf terbilang */
+    font-style: italic; /* Gaya huruf italic untuk teks terbilang */
+    color: #666; /* Warna teks abu-abu untuk teks terbilang */
+    font-size: 10px;
+}
+
+/* Modal Styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    animation: fadeIn 0.5s;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+    animation: slideIn 0.5s;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#modalImage {
+    width: 100%;
+    border-radius: 10px;
+}
+
+/* Animations */
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes slideIn {
+    from { transform: translateY(-50px); }
+    to { transform: translateY(0); }
+}
+
+.btn-export {
+    background-color: #000631;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  text-align: center;
+  font-size: 1em;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  /* display: block; */
+  margin: 20px auto;
+  text-decoration: none;
+  
 }
