--- a/static/pakar/css/style.css
+++ b/static/pakar/css/style.css
@@ -55,8 +55,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  /* font-family: "Poppins", sans-serif; */
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -357,7 +356,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Averia Serif Libre", cursive;
+  font-family: sans-serif;
   font-weight: 500;
   line-height: 1.2;
   color: #141414;
@@ -7468,11 +7467,7 @@ button.bg-dark:focus {
 .pb-2,
 .py-2 {
   padding-bottom: 0.5rem !important;
-  background-color: #78cc6d;
-  width: 30px;
 }
-
-h2.title.position-relative.pb-2.mb-4 {}
 
 .pl-2,
 .px-2 {
