--- a/templates/home/page_detail.html
+++ b/templates/home/page_detail.html
@@ -3,21 +3,37 @@
 {% block content %}
 
 
-<div class="swiper mySwiper">
-  <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="/media/assets/people-2562626_1280.jpg" alt="Slide 1"></div>
+ <!-- Header Start -->
+ <div class="container-fluid bg-breadcrumb">
+  <div class="container text-center py-5" style="max-width: 900px;">
+      <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">{{ page.title }}</h4>
+      <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="#">Pages</a></li>
+      </ol>    
   </div>
 </div>
+<!-- Header End -->
 
-<div class="container-page">
-  <main>
-      <section>
-          <h2>{{ page.title }}</h2>
-          <p>{{ page.content|linebreaks }}</p>
-      </section>
-     
-  </main>
+
+<!-- Page Start -->
+<div class="container-fluid bg-light about py-5">
+  <div class="container py-5">
+
+          <div class="xl-6 wow fadeInLeft" data-wow-delay="0.2s">
+              <div class="about-item-content bg-white rounded p-5 h-100">
+                  <!-- <h4 class="text-primary">{{ page.title }}</h4> -->
+                  <h1 class="display-4 mb-4">{{ page.title }}</h1>
+                  <p>{{ page.content|safe }}</p>
+                  </p>
+              
+                 
+          
+              </div>
+          </div>
+  </div>
 </div>
+<!-- Page End -->
 
 
 
