--- a/templates/kepakaran/bidang_kepakaran_detail.html
+++ b/templates/kepakaran/bidang_kepakaran_detail.html
@@ -25,16 +25,16 @@
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="{{ user.image.url }}" class="img-fluid rounded-top w-100" alt="">
-                                <div class="team-icon">
+                                <!-- <div class="team-icon">
                                     <a class="btn btn-primary btn-sm-square rounded-pill mb-2" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-primary btn-sm-square rounded-pill mb-2" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="btn btn-primary btn-sm-square rounded-pill mb-2" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn btn-primary btn-sm-square rounded-pill mb-0" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="team-title p-4">
                                 <a href="{% url 'detail_pakar' slug=user.username %}"><h4 class="mb-0">{{ user.first_name }} {{ user.last_name }}</h4></a>
-                                <p class="mb-0">Profession</p>
+                                <!-- <p class="mb-0">Profession</p> -->
                             </div>
                         </div>
                     </div>
