--- a/templates/accounts/base.html
+++ b/templates/accounts/base.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}?v={{ STATIC_VERSION }}">
+    <link rel="stylesheet" href="{% static 'accounts/styles.css' %}?v={{ STATIC_VERSION }}">
 </head>
 <body>
     <header>
-        <!-- <img src="{{ MEDIA_URL }}logo/invite-white.png" alt="Logo"> -->
+        <img src="/media/logo/Logo-FEB-Putih.png" alt="Logo">
       </header>
 {%block content%}
 {%endblock%}
