--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,7 +4,7 @@
 {%block content%}
 <div class="container-register">
     <h2>Login</h2>
-    <p>Buat akun terlebih dahulu untuk menikmati layanan Inviteku.com</p>
+    <p>Silahkan login dengan Username dan Password</p>
     {% if msg %}
         <span class="text-error">{{ msg | safe }}</span>
     {% endif %}
