--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -1,20 +1,15 @@
 {% extends 'dashboard/base.html' %}
 {% block title %}Profil @{{ user.username }}{% endblock %}
 {% block content %}
-
-
-
-
-
 <main class="main-content">
     <header class="main-header">
         <div class="breadcrumb">
             <span>Pages / Profileku</span>
         </div>
-        <div class="header-right">
+        <!-- <div class="header-right">
             <a href="/" class="btn-add"><i class="fas fa-plus"></i> Undanganku</a>
             <a href="#" class="bar-icon"><i class="fas fa-bars sidebar-toggle"></i></a>
-        </div>
+        </div> -->
     </header>
     
     <section class="main-section">
