--- a/templates/kepakaran/detail_pakar.html
+++ b/templates/kepakaran/detail_pakar.html
@@ -282,10 +282,8 @@
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                    <a href="{{ book.link_book }}" target="_blank"> <h5 class="mb-1">{{ book.judul_book }}</h5></a>
-                                    <p class="mb-2">{{ book.tahun_book }} | 
-                                        <!-- <small>{{ book.tahun_book }}</small> -->
+                                    <p class="mb-2">{{ book.tahun_book }} | {{ book.penerbit }}
                                     </p>
-                                    <!-- <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p> -->
                                 </div>
                                 {% endfor %}
 
