--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -5,7 +5,7 @@
   
 <div class="container-register">
   <h2>Register</h2>
-  <p>Buat akun terlebih dahulu untuk menikmati layanan Inviteku.com</p>
+  <p>Buat akun terlebih dahulu untuk menikmati layanan kami..</p>
 
   {% if msg %}
       <span class="text-error">{{ msg | safe }}</span>
