--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -14,7 +14,6 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <!-- <img src="/media/logo/invite-black.png" class="logo-dashboard" alt="Logo"> -->
-             
                 <a href="#" class="close-btn" id="close-btn"><i class="fas fa-times"></i></a>
             </div>
             <nav class="sidebar-nav">
@@ -26,13 +25,14 @@
                 <li><a href="#"><i class="fas fa-credit-card"></i>Bidang Kepakaran</a></li>
                 <li><a href="/"><i class="fas fa-table"></i>Minat Penelitian</a></li>
                 </ul>
+                <h3>List Form</h3>
                 <ul>
-                    <li><a href="{% url 'list_pendidikan' %}"><i class="fas fa-credit-card"></i>Pendidikan</a></li>
-                    <li><a href="{% url 'list_organisasi' %}"><i class="fas fa-tools"></i> Organisasi</a></li>
-                    <li><a href="{% url 'list_penelitian' %}"><i class="fas fa-table"></i> Penelitian</a></li>
-                    <li><a href="{% url 'list_book' %}"><i class="fas fa-table"></i>Buku</a></li>
-                    <li><a href="{% url 'list_pengabdian' %}"><i class="fas fa-table"></i>Pengabdian</a></li>
-                    <li><a href="{% url 'list_news' %}"><i class="fas fa-newspaper"></i>News/Media</a></li>
+                    <li><a href="{% url 'list_pendidikan' %}"><i class="fas fa-credit-card"></i>List Pendidikan</a></li>
+                    <li><a href="{% url 'list_organisasi' %}"><i class="fas fa-sitemap"></i>List Organisasi</a></li>
+                    <li><a href="{% url 'list_penelitian' %}"><i class="fas fa-newspaper"></i>List Penelitian</a></li>
+                    <li><a href="{% url 'list_book' %}"><i class="fas fa-book"></i>List Buku</a></li>
+                    <li><a href="{% url 'list_pengabdian' %}"><i class="fas fa-table"></i>List Pengabdian</a></li>
+                    <li><a href="{% url 'list_news' %}"><i class="fas fa-newspaper"></i>List News/Media</a></li>
                 </ul>
                 <h3>Account Pages</h3>
                 <ul>
