--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -97,8 +97,15 @@
                                     <span class="dropdown-toggle">Profil</span>
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a href="feature.html" class="dropdown-item">Our Features</a>
-                            
+                                    <a href="/" class="dropdown-item">Sejarah</a>
+                                    <a href="/" class="dropdown-item">Visi dan Misi</a>
+                                    <a href="/" class="dropdown-item">Struktur Organisasi</a>
+                                    <a href="/" class="dropdown-item">Renstra</a>
+                                    <a href="/" class="dropdown-item">Fasilitas</a>
+                                    <a href="/" class="dropdown-item">Pimpinan</a>
+                                    <a href="/" class="dropdown-item">Tenaga Kependidikan</a>
+                                    <a href="/" class="dropdown-item">Tenaga Pengajar</a>
+                                    <a href="/" class="dropdown-item">Unit Penjamin Mutu (UPM)</a>
                                 </div>
                             </div>
 
@@ -107,8 +114,13 @@
                                     <span class="dropdown-toggle">Akademik</span>
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a href="feature.html" class="dropdown-item">Our Features</a>
-                                  
+                                    <a href="/" class="dropdown-item">SOP Layanan</a>
+                                    <a href="/" class="dropdown-item">Kalender Akademik</a>
+                                    <a href="/" class="dropdown-item">Semester Antara</a>
+                                    <a href="/" class="dropdown-item">Akreditasi</a>
+                                    <a href="/" class="dropdown-item">Persuratan</a>
+                                    <a href="/" class="dropdown-item">Perpustakaan</a>
+                                   
                                 </div>
                             </div>
 
@@ -117,7 +129,13 @@
                                     <span class="dropdown-toggle">Progam Studi</span>
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a href="feature.html" class="dropdown-item">Our Features</a>
+                                    <a href="/" class="dropdown-item">Ekonomi Pembangunan (S1)</a>
+                                    <a href="/" class="dropdown-item">Manajemen (S1)</a>
+                                    <a href="/" class="dropdown-item">Bisnis Digital (S1)</a>
+                                    <a href="/" class="dropdown-item">Pendidikan Ekonomi (S1)</a>
+                                    <a href="/" class="dropdown-item">Pendidikan Akuntansi (S1)</a>
+                                    <a href="/" class="dropdown-item">Akuntansi (S1)</a>
+                                    <a href="/" class="dropdown-item">Kewirausahaan (S1)</a>
                                   
                                 </div>
                             </div>
